# Prova

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md
cloudformation/: configure_sg.py  ecs_cloudformation.yaml  ecs_cloudformation_withroles.yaml
feed/: Custom_Redis.py  README.md  arctic.py  binance.py  binancefutures.py  bitfinex.py  checker.py  clusterc.sh  coinbase.py  custom_bitmex.py  custom_coinbase.py  custom_coinbase2.py  custom_timescaledb.py  disaster_recovery.sh  ec2_backup_to_s3.sh  install_packages.sh  nbbo.py  pyproject.toml  run_timescaledb_development.sh  run_timescaledb_production.sh  set_pg_ts.sh  set_timescaledb_development.sh  set_timescaledb_production.sh  timescaledb.py  timescaledb_backup.sh  timescaledb_restore_backup.sh  ultimaec2_backup_to_s3.sh  update_ip_dev.sh  upload_db_conf.sh
feed/tests/: Custom_Redis.py  custom_bitmex.py  custom_bybit.py  custom_timescaledb.py  test_binance copy.py  test_binance.py  test_bitfinex.py  test_bitmex_perp.py  test_bitmex_spot.py  test_bitstamp.py  test_bybit_perp.py  test_deribit.py  test_deribit_spot_perp.py  test_feed_redis.py  test_kraken.py  test_okx_perp.py  test_okx_spot.py  test_redis.py  test_timescaledb.py
scripts/: clusterc.sh  command_cron.sh  configure_barman.sh  configure_cc_ansible.sh  configure_n8n_startup.sh  configure_postgres_timescaledb.sh  configure_redis_timescaledb.sh  ecs_backup_settings.sh  install_cc_instance.sh  install_ecs_instance.sh  install_packages_cc_instance.sh  install_packages_ecs_instance.sh  install_packages_multi_os.sh  install_packages_standby_instance.sh  (+15 more)
(+11 files in other folders)
