[tool.poetry]
name = "feed"
version = "0.1.0"
description = ""
authors = ["gawaboga <samuele.morzenti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.16"
cryptofeed = "^2.3.2"
redis = "^5.0.1"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
