[tool.poetry]
name = "feed"
version = "0.1.0"
description = ""
authors = ["gawaboga <samuele.morzenti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.16"
cryptofeed = { git = "https://github.com/bmoscon/cryptofeed.git", branch = "master" }
redis = "^5.0.1"
pyyaml = "^6.0.1"
asyncpg = "^0.29.0"
aioredis = "^2.0.1"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
